# dice-roll

./: Cargo.toml  LICENSE  Procfile
src/: ast.rs  eval.rs  expr.rs  format.rs  lib.rs  main.rs  moorgate.rs  parse.rs
src/eval/: error.rs  maths.rs  output.rs
src/parse/: number.rs  op.rs  space.rs
