[package]
name = "dice-roll"
version = "0.1.0"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pom = "3.1.0"
rand = "0.7.3"
actix-web = "2"
actix-rt = "1"
